--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -8,7 +8,9 @@
     "test:watch": "npm run test -- --watch"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "mocha": "^2.3.3"
   },
   "dependencies": {
-    "immutable": "^3.7.5"
+    "immutable": "^3.7.5",
+    "redux": "^3.0.4"
   }
 }
