--- a/voting-client/package.json
+++ b/voting-client/package.json
@@ -25,10 +25,13 @@
     "chai-immutable": "^1.5.2",
     "jsdom": "^7.0.2",
     "mocha": "^2.3.3",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
-    "immutable": "^3.7.5"
+    "immutable": "^3.7.5",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
   }
 }
